[tool.poetry]
name = "web-archive"
version = "0.1.0"
description = "Project that can help to fetch and to store all media data from web-page"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
